<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_auth"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.ecotracker.ui.auth.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.ecotracker.ui.auth.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_usernameFragment"
            app:destination="@id/usernameFragment" />
    </fragment>

    <fragment
        android:id="@+id/usernameFragment"
        android:name="com.ecotracker.ui.auth.UsernameFragment"
        android:label="@string/title_username_setup"
        tools:layout="@layout/fragment_username" />

</navigation>
